--- a/templates/index.html
+++ b/templates/index.html
@@ -41,14 +41,14 @@
     </div>
     <div class="row-fluid text-center search-center-block">
       <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-      <input class="form-control" id="search-input" placeholder="{{ _('Suche in Lebenslagen, Geodatendiensten') }}…" type="search" />
+      <input class="form-control" id="search-input" placeholder="{{ _('Suche in Themen, Geodatendiensten') }}…" type="search" />
       <span id="clear-search-input" class="glyphicon glyphicon-remove-circle"></span>
       <div id="results"></div>
       <div id="results-pagination"></div>
     </div>
     <div class="row-fluid text-center center-block">
       <div class="col-md-6">
-        <a href="{{ url_for('situations', lang_code = g.current_lang) }}">
+        <a href="{{ url_for('themes', lang_code = g.current_lang) }}">
           <span class="glyphicon mega-glyphicon glyphicon-map-marker" aria-hidden="true"></span>
           <p class="text-justify">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
         </a>
