--- a/templates/themes.html
+++ b/templates/themes.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
-{% set active_page = 'situations' %}
+{% set active_page = 'themes' %}
 
 {% block content %}
   {% include 'navbar.html' %}
