theme view: introduced the theme slider and the map; realized basic interaction

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
       <div class="col-md-6">
         <a href="{{ url_for('themes', lang_code = g.current_lang) }}">
           <span class="glyphicon mega-glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-          <p class="text-justify">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+          <p class="text-justify"><span class="bold">{{ _('Themen') }}</span> – {{ _('Finden Sie zu einem Thema, das Sie interessiert, in Ihrer Nähe alle Angebote aus der Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock.') }}</p>
         </a>
       </div>
       <div class="col-md-6">
