--- a/templates/themes.html
+++ b/templates/themes.html
@@ -2,7 +2,44 @@
 
 {% set active_page = 'themes' %}
 
+{% block styles %}
+  {{ super() }}
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/themes.css') }}" />
+{% endblock %}
+
+{% block scripts %}
+  {{super()}}
+  <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
+  <script type="application/javascript" src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+  <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js"></script>
+  <script type="application/javascript" src="{{ url_for('static', filename='js/themes.js') }}"></script>
+{% endblock %}
+
 {% block content %}
   {% include 'navbar.html' %}
+  <div class="container-fluid">
+    <div class="row-fluid">
+      <div class="slider">
+        {% for theme in themes %}
+          <div>
+            <div class="theme" id="theme-{{ theme.id }}" data-map-theme-title="{{ theme.title }}">
+              <span class="theme-title">
+                {{ theme.title }}
+                {% if theme.thumb != None %}
+                  <img src="{{ url_for('static', filename='images/') }}{{ theme.thumb }}" class="theme-thumb" />
+                {% endif %}
+              </span>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
+    <div class="row-fluid hidden" id="map-container">
+      <div id="map"></div>
+    </div>
+  </div>
   {% include 'footer.html' %}
 {% endblock %}
