--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -14,7 +14,7 @@
 
 {% block content %}
   {% include 'navbar.html' %}
-  <div class="container-fluid">
+  <div class="container-fluid" id="defining-container" data-mobile="{{ mobile|lower }}">
     <div class="panel-group" id="accordion">
       {% for category in categories %}
         <div class="panel panel-info">
