--- a/templates/themes.html
+++ b/templates/themes.html
@@ -20,7 +20,7 @@
 
 {% block content %}
   {% include 'navbar.html' %}
-  <div class="container-fluid">
+  <div class="container-fluid" id="defining-container" data-mobile="{{ mobile|lower }}">
     <div class="row-fluid">
       <div class="slider">
         {% for theme in themes %}
@@ -41,5 +41,7 @@
       <div id="map"></div>
     </div>
   </div>
+  <div class="translation hidden" id="map-layer-title" data-translation="{{ _('Karte') }}"></div>
+  <div class="translation hidden" id="aerial-layer-title" data-translation="{{ _('Luftbild') }}"></div>
   {% include 'footer.html' %}
 {% endblock %}
