--- a/templates/imprint.html
+++ b/templates/imprint.html
@@ -1,5 +1,7 @@
 {% extends 'index.html' %}
 
+{% set active_page = 'imprint' %}
+
 {% block styles %}
   {{ super() }}
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/static-page.css') }}" />
@@ -60,5 +62,7 @@
       <a href="mailto:{{ config.CONTACT }}">{{ config.CONTACT }}</a>
     </p>
   </div>
-  {% include 'footer.html' %}
+  {% if not mobile %}
+    {% include 'footer.html' %}
+  {% endif %}
 {% endblock %}
