--- a/templates/index.html
+++ b/templates/index.html
@@ -31,35 +31,39 @@
 {% block content %}
   {% include 'navbar.html' %}
   <div class="container-fluid" id="defining-container" data-mobile="{{ mobile|lower }}">
-    <div class="row-fluid text-center header-center-block">
-      <img class="image image-left" src="{{ url_for('static', filename='images/child.svg') }}" />
-      <img class="image image-right" src="{{ url_for('static', filename='images/parent.svg') }}" />
+    <div class="row-fluid text-center header-center-block{% if mobile %} mobile{% endif %}">
+      {% if not mobile %}
+        <img class="image image-left" src="{{ url_for('static', filename='images/child.svg') }}" />
+        <img class="image image-right" src="{{ url_for('static', filename='images/parent.svg') }}" />
+      {% endif %}
       <h1 class="title">{{ config.TITLE }}</h1>
     </div>
-    <div class="row-fluid text-center center-block">
+    <div class="row-fluid text-center center-block{% if mobile %} mobile{% endif %}">
       <p>{{ _('Einstiegsmöglichkeit in die Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock und Schnittstelle aller Anwendungen mit Raumbezug des Kataster-, Vermessungs- und Liegenschaftsamtes der Hanse- und Universitätsstadt Rostock') }}</p>
     </div>
-    <div class="row-fluid text-center search-center-block">
+    <div class="row-fluid text-center search-center-block{% if mobile %} mobile{% endif %}">
       <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-      <input class="form-control" id="search-input" placeholder="{{ _('Suche in Themen, Geodatendiensten') }}…" type="search" />
+      <input class="form-control{% if mobile %} mobile{% endif %}" id="search-input" placeholder="{{ _('Suche in Themen und Katalog') }}…" type="search" />
       <span id="clear-search-input" class="glyphicon glyphicon-remove-circle"></span>
       <div id="results"></div>
       <div id="results-pagination"></div>
     </div>
-    <div class="row-fluid text-center center-block">
-      <div class="col-md-6">
+    <div class="row-fluid text-center center-block{% if mobile %} mobile{% endif %}">
+      {% if not mobile %}<div class="col-md-6">{% endif %}
         <a href="{{ url_for('themes', lang_code = g.current_lang) }}">
           <span class="glyphicon mega-glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-          <p class="text-justify"><span class="bold">{{ _('Themen') }}</span> – {{ _('Finden Sie zu einem Thema, das Sie interessiert, in Ihrer Nähe alle Angebote aus der Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock.') }}</p>
+          <p class="mega-glyphicon-text{% if not mobile %} text-justify{% else %} mobile{% endif %}"><span class="bold">{{ _('Themen') }}</span> – {{ _('Finden Sie zu einem Thema, das Sie interessiert, in Ihrer Nähe alle Angebote aus der Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock.') }}</p>
         </a>
-      </div>
-      <div class="col-md-6">
+      {% if not mobile %}</div>{% endif %}
+      {% if not mobile %}<div class="col-md-6">{% endif %}
         <a href="{{ url_for('catalog', lang_code = g.current_lang) }}">
           <span class="glyphicon mega-glyphicon glyphicon-list" aria-hidden="true"></span>
-          <p class="text-justify"><span class="bold">{{ _('Katalog') }}</span> – {{ _('Stöbern Sie in der Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock anhand übersichtlich geordneter, filterbarer Listen.') }}</p>
+          <p class="mega-glyphicon-text{% if not mobile %} text-justify{% else %} mobile{% endif %}"><span class="bold">{{ _('Katalog') }}</span> – {{ _('Stöbern Sie in der Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock anhand übersichtlich geordneter, filterbarer Listen.') }}</p>
         </a>
-      </div>
+      {% if not mobile %}</div>{% endif %}
     </div>
   </div>
-  {% include 'footer.html' %}
+  {% if not mobile %}
+    {% include 'footer.html' %}
+  {% endif %}
 {% endblock %}
