--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -1,5 +1,7 @@
 {% extends 'index.html' %}
 
+{% set active_page = 'privacy_policy' %}
+
 {% block styles %}
   {{ super() }}
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/static-page.css') }}" />
