--- a/templates/terms_of_use.html
+++ b/templates/terms_of_use.html
@@ -1,5 +1,7 @@
 {% extends 'index.html' %}
 
+{% set active_page = 'terms_of_use' %}
+
 {% block styles %}
   {{ super() }}
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/static-page.css') }}" />
