--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 {% block metas %}
   {{ super() }}
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="author" content="{{ config.META_AUTHOR }}" />
   <meta name="description" content="{{ config.META_DESCRIPTION }}" />
   <meta name="keywords" content="{{ config.META_KEYWORDS }}" />
