--- a/templates/themes.html
+++ b/templates/themes.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+﻿{% extends 'index.html' %}
 
 {% set active_page = 'themes' %}
 
@@ -7,6 +7,8 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.62.0/dist/L.Control.Locate.min.css" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/themes.css') }}" />
 {% endblock %}
 
@@ -15,6 +17,7 @@
   <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
   <script type="application/javascript" src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
   <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js"></script>
+  <script type="application/javascript" src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.62.0/dist/L.Control.Locate.min.js"></script>
   <script type="application/javascript" src="{{ url_for('static', filename='js/themes.js') }}"></script>
 {% endblock %}
 
@@ -39,10 +42,26 @@
     </div>
     <div class="row-fluid hidden" id="map-container">
       <div id="map"></div>
+      <div class="translation hidden" id="map-layer-title" data-translation="{{ _('Karte') }}"></div>
+      <div class="translation hidden" id="aerial-layer-title" data-translation="{{ _('Luftbild') }}"></div>
+      <div class="translation hidden" id="location-control-title" data-translation="{{ _('Standortbestimmung') }}"></div>
+      <div id="location-error-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">{{ _('Standortbestimmung fehlgeschlagen') }}</h4>
+            </div>
+            <div class="modal-body">
+              <p>{{ _('Karte zentriert auf Standardposition') }}</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">{{ _('schließen') }}</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="translation hidden" id="map-layer-title" data-translation="{{ _('Karte') }}"></div>
-  <div class="translation hidden" id="aerial-layer-title" data-translation="{{ _('Luftbild') }}"></div>
   {% if not mobile %}
     {% include 'footer.html' %}
   {% endif %}
