--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -4,11 +4,25 @@
 
 {% block styles %}
   {{ super() }}
+{% endblock %}
+
+{% block main_styles %}
+  {{ super() }}
+{% endblock %}
+
+{% block local_styles %}
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/catalog.css') }}" />
+{% endblock %}
+
+{% block favicon %}
+  {{ super() }}
 {% endblock %}
 
 {% block scripts %}
   {{super()}}
+{% endblock %}
+
+{% block local_scripts %}
   <script type="application/javascript" src="{{ url_for('static', filename='js/catalog.js') }}"></script>
 {% endblock %}
 
@@ -63,7 +77,7 @@
                       <div class="panel-heading">
                         <h4 class="panel-title">
                           <a data-toggle="collapse" href="#application-{{ application_link.id }}">
-                            <span class="full-width">{% if application_link.logo != None %}<img src="{{ url_for('static', filename='images/') }}{{ application_link.logo }}" class="application-logo" /> {% endif %}{{ application_link.group }}</span>
+                            <span class="full-width">{% if application_link.logo != None %}<img src="{{ url_for('static', filename='images/logos/') }}{{ application_link.logo }}" class="application-logo" /> {% endif %}{{ application_link.group }}</span>
                           </a>
                         </h4>
                       </div>
