--- a/templates/index.html
+++ b/templates/index.html
@@ -19,14 +19,24 @@
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/index.css') }}" />
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  {% block external_styles %}
+  {% endblock %}
+  {% block main_styles %}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
+  {% endblock %}
+  {% block local_styles %}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/index.css') }}" />
+  {% endblock %}
+  {% block favicon %}
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  {% endblock %}
 {% endblock %}
 
 {% block scripts %}
   {{super()}}
-  <script type="application/javascript" src="{{url_for('static', filename='js/index.js')}}"></script>
+  {% block local_scripts %}
+    <script type="application/javascript" src="{{url_for('static', filename='js/index.js')}}"></script>
+  {% endblock %}
 {% endblock %}
 
 {% block content %}
