--- a/templates/themes.html
+++ b/templates/themes.html
@@ -3,21 +3,38 @@
 {% set active_page = 'themes' %}
 
 {% block styles %}
+  {{super()}}
+{% endblock %}
+
+{% block external_styles %}
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/externals/slick/slick.css') }}"/>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/externals/slick/slick-theme.css') }}"/>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/externals/leaflet/leaflet.css') }}"/>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/externals/font-awesome/font-awesome.min.css') }}">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/externals/leaflet-locatecontrol/L.Control.Locate.min.css') }}" />
+{% endblock %}
+
+{% block main_styles %}
   {{ super() }}
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
-  <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.62.0/dist/L.Control.Locate.min.css" />
+{% endblock %}
+
+{% block local_styles %}
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/themes.css') }}" />
+{% endblock %}
+
+{% block favicon %}
+  {{ super() }}
 {% endblock %}
 
 {% block scripts %}
   {{super()}}
-  <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
-  <script type="application/javascript" src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-  <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js"></script>
-  <script type="application/javascript" src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.62.0/dist/L.Control.Locate.min.js"></script>
+{% endblock %}
+
+{% block local_scripts %}
+  <script type="application/javascript" src="{{ url_for('static', filename='js/externals/slick/slick.min.js') }}"></script>
+  <script type="application/javascript" src="{{ url_for('static', filename='js/externals/leaflet/leaflet.js') }}"></script>
+  <script type="application/javascript" src="{{ url_for('static', filename='js/externals/proj4js/proj4.js') }}"></script>
+  <script type="application/javascript" src="{{ url_for('static', filename='js/externals/leaflet-locatecontrol/L.Control.Locate.min.js') }}"></script>
   <script type="application/javascript" src="{{ url_for('static', filename='js/themes.js') }}"></script>
 {% endblock %}
 
@@ -25,6 +42,7 @@
   {% include 'navbar.html' %}
   <div class="container-fluid" id="defining-container" data-mobile="{{ mobile|lower }}">
     <div class="row-fluid">
+      <{% if mobile %}h4{% else %}h3{% endif %} class="headline">{{ _('Welches Thema interessiert Sie?') }}</{% if mobile %}h4{% else %}h3{% endif %}>
       <div class="slider">
         {% for theme in themes %}
           <div>
@@ -32,7 +50,7 @@
               <span class="theme-title">
                 {{ theme.title }}
                 {% if theme.thumb != None %}
-                  <img src="{{ url_for('static', filename='images/') }}{{ theme.thumb }}" class="theme-thumb" />
+                  <img src="{{ url_for('static', filename='images/thumbs/') }}{{ theme.thumb }}" class="theme-thumb" />
                 {% endif %}
               </span>
             </div>
@@ -41,22 +59,30 @@
       </div>
     </div>
     <div class="row-fluid hidden" id="map-container">
+      <{% if mobile %}h4{% else %}h3{% endif %} class="headline" id="map-headline">{{ _('Diese Angebote existieren zum gewählten Thema:') }}</{% if mobile %}h4{% else %}h3{% endif %}>
+      <span class="glyphicon glyphicon-search" id="icon-address-input" aria-hidden="true"></span>
+      <input class="form-control{% if mobile %} mobile{% endif %}" id="address-input" placeholder="{{ _('Adressensuche') }}…" type="search" />
+      <span id="clear-address-input" class="glyphicon glyphicon-remove-circle"></span>
+      <div id="results"></div>
       <div id="map"></div>
-      <div class="translation hidden" id="map-layer-title" data-translation="{{ _('Karte') }}"></div>
-      <div class="translation hidden" id="aerial-layer-title" data-translation="{{ _('Luftbild') }}"></div>
-      <div class="translation hidden" id="location-control-title" data-translation="{{ _('Standortbestimmung') }}"></div>
-      <div id="location-error-modal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h4 class="modal-title">{{ _('Standortbestimmung fehlgeschlagen') }}</h4>
-            </div>
-            <div class="modal-body">
-              <p>{{ _('Karte zentriert auf Standardposition') }}</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">{{ _('schließen') }}</button>
-            </div>
+      <div id="geoportal-link">
+        <span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ _('Kartensituation in Geoport.HRO öffnen, dem Portal für Geodaten der Hanse- und Universitätsstadt Rostock und Umgebung') }}
+      </div>
+    </div>
+    <div class="translation hidden" id="map-layer-title" data-translation="{{ _('Karte') }}"></div>
+    <div class="translation hidden" id="aerial-layer-title" data-translation="{{ _('Luftbild') }}"></div>
+    <div class="translation hidden" id="location-control-title" data-translation="{{ _('Standortbestimmung') }}"></div>
+    <div id="location-error-modal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">{{ _('Standortbestimmung fehlgeschlagen') }}</h4>
+          </div>
+          <div class="modal-body">
+            <p>{{ _('Karte zentriert auf Standardposition') }}</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">{{ _('schließen') }}</button>
           </div>
         </div>
       </div>
