--- a/templates/themes.html
+++ b/templates/themes.html
@@ -48,9 +48,24 @@
           <div>
             <div class="theme" id="theme-{{ theme.id }}" data-map-theme-title="{{ theme.title }}">
               <span class="theme-title">
-                {{ theme.title }}
-                {% if theme.thumb != None %}
-                  <img src="{{ url_for('static', filename='images/thumbs/') }}{{ theme.thumb }}" class="theme-thumb" />
+                <span>{{ theme.title }}</span>
+                {% if theme.icon != None %}
+                  <span class="fa fa-{{ theme.icon }} theme-icon"></span>
+                {% endif %}
+              </span>
+              <span class="theme-title-flipped hidden {% if theme.descriptive_tags != None %}full{% else %}light{% endif %}">
+                {% if theme.descriptive_tags != None %}
+                  {% for descriptive_tag in theme.descriptive_tags %}
+                    <span>{{ descriptive_tag }}</span>
+                    {% if loop.last %}
+                      <span>…</span>
+                    {% endif %}
+                  {% endfor %}
+                {% else %}
+                  <span>{{ theme.title }}</span>
+                  {% if theme.icon != None %}
+                    <span class="fa fa-{{ theme.icon }} theme-icon"></span>
+                  {% endif %}
                 {% endif %}
               </span>
             </div>
@@ -59,7 +74,7 @@
       </div>
     </div>
     <div class="row-fluid hidden" id="map-container">
-      <{% if mobile %}h4{% else %}h3{% endif %} class="headline" id="map-headline">{{ _('Diese Angebote existieren zum gewählten Thema:') }}</{% if mobile %}h4{% else %}h3{% endif %}>
+      <{% if mobile %}h4{% else %}h3{% endif %} class="headline" id="map-headline">{{ _('Diese Angebote existieren zum Thema') }} <span id="map-headline-theme-title"></span></{% if mobile %}h4{% else %}h3{% endif %}>
       <span class="glyphicon glyphicon-search" id="icon-address-input" aria-hidden="true"></span>
       <input class="form-control{% if mobile %} mobile{% endif %}" id="address-input" placeholder="{{ _('Adressensuche') }}…" type="search" />
       <span id="clear-address-input" class="glyphicon glyphicon-remove-circle"></span>
