--- a/templates/themes.html
+++ b/templates/themes.html
@@ -73,13 +73,13 @@
         {% endfor %}
       </div>
     </div>
-    <div class="row-fluid hidden" id="map-container">
+    <div class="row-fluid" id="map-container">
       <{% if mobile %}h4{% else %}h3{% endif %} class="headline" id="map-headline">{{ _('Diese Angebote existieren zum Thema') }} <span id="map-headline-theme-title"></span></{% if mobile %}h4{% else %}h3{% endif %}>
       <span class="glyphicon glyphicon-search" id="icon-address-input" aria-hidden="true"></span>
       <input class="form-control{% if mobile %} mobile{% endif %}" id="address-input" placeholder="{{ _('Adressensuche') }}…" type="search" />
       <span id="clear-address-input" class="glyphicon glyphicon-remove-circle"></span>
       <div id="results"></div>
-      <div id="map"></div>
+      <div id="map"{% if mobile %} class="mobile"{% endif %}></div>
       <div id="geoportal-link">
         <span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ _('Kartensituation in Geoport.HRO öffnen, dem Portal für Geodaten der Hanse- und Universitätsstadt Rostock und Umgebung') }}
       </div>
