--- a/templates/themes.html
+++ b/templates/themes.html
@@ -41,12 +41,12 @@
 {% block content %}
   {% include 'navbar.html' %}
   <div class="container-fluid" id="defining-container" data-mobile="{{ mobile|lower }}">
-    <div class="row-fluid">
+    <div class="row-fluid" id="theme-container">
       <{% if mobile %}h4{% else %}h3{% endif %} class="headline">{{ _('Welches Thema interessiert Sie?') }}</{% if mobile %}h4{% else %}h3{% endif %}>
       <div class="slider" id="theme-slider">
         {% for theme in themes %}
           <div>
-            <div class="theme" id="theme-{{ theme.id }}" data-map-theme-title="{{ theme.title }}">
+            <div class="theme" id="theme-{{ theme.id }}" data-theme-id="{{ theme.id }}" data-theme-title="{{ theme.title }}">
               <span class="theme-title">
                 <span class="theme-text">{{ theme.title }}</span>
                 {% if theme.icon != None %}
@@ -84,7 +84,7 @@
         <span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ _('Kartensituation in Geoport.HRO öffnen, dem Portal für Geodaten der Hanse- und Universitätsstadt Rostock und Umgebung') }}
       </div>
     </div>
-    <div class="row-fluid">
+    <div class="row-fluid" id="offer-container">
       <{% if mobile %}h4{% else %}h3{% endif %} class="headline" id="offers-headline">{{ _('Diese Angebote existieren zum Thema') }} <span id="offers-headline-theme-title"></span></{% if mobile %}h4{% else %}h3{% endif %}>
       <div class="slider" id="offer-slider"></div>
     </div>
